...
    android:layout_height="match_parent"
    tools:context=".view.authorizeView.AuthFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/signInButton"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="15dp"
        android:text="@string/register"
        app:layout_constraintEnd_toStartOf="@+id/signInButton"
...
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/username_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="220dp"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="textPersonName" />

...
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/password_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="220dp"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

...
