<resources>
    <string name="app_name">team-2a</string>


    <string name="manage_dept_course_label">Manage Department Courses</string>
    <string name="edit_major_req">Edit Major Requirements</string>
    <string name="manage_advisees">Manage Advisees</string>
    <string name="HOD_menu_heading">Manage catalogue</string>
    <string name="add_course_label"> Add/Edit Course</string>
    <string name="remove_course_label">Remove Course</string>
    <string name="HOD_menu2_label">What would you like to do today?</string>
    <string name="student_button">Student</string>
    <string name="advisor_button">Manage Advisees</string>
    <string name="head_of_dept_button">Head of Department</string>
    <string name="welcome_message">Please select one of the options below</string>
    <string name="adviseeListLabel"> You currently have no advisees</string>
    <string name="adviseeListTextView">Advisees: </string>
    <string name="add_advisee_button">Add Advisee</string>
    <string name="remove_advisee_button">Remove Advisee</string>
    <string name="advisorAddStudentMenuLabel">Enter Student Information</string>
    <string name="advisorMenuLabel">Choose between the two options</string>
    <string name="firstNameLabel">First Name</string>
    <string name="middleNameLabel">Middle Name</string>
    <string name="lastNameLabel">Last Name</string>
    <string name="classYearLabel">Class Year</string>
    <string name="studentIdLabel">Student Id</string>
    <string name="add_advisee_label"> Add Advisee</string>
    <string name="doneLabel"> DONE</string>
    <string name="createPoolLabel"> Create Pool </string>
    <string name="removePoolLabel"> Remove Pool </string>
    <string name="manageCatalogueButtonLabel"> Manage Catalogue </string>
    <string name="manageMajorLabel"> Manage Major </string>
    <string name="coursesListLabel">There\'s\ no pools to show</string>
    <string name="listOfCourses">Course List:</string>
    <string name="poolEntry">Enter Pool Name Here</string>
    <string name="addCourseMenuLabel"> Enter course information</string>
    <string name="editCourseID"> CourseID </string>
    <string name="editCourseTimeStart"> Start Time (24hr) </string>
    <string name="editCourseTimeEnd"> End Time (24hr) </string>
    <string name="editDay"> Days </string>
    <string name="monday"> M </string>
    <string name="tuesday">T </string>
    <string name="wednesday"> W </string>
    <string name="thursday"> Fall</string>
    <string name="friday"> Spring </string>
    <string name="removeCourse2"> Enter Course ID</string>
    <string name="enterRemoveID"> Course ID</string>
    <string name="Add"> Add</string>
    <string name="Remove"> Remove</string>
    <string name="EnterPoolName"> Enter Pool Name</string>
    <string name="listOfPools"> List of Pools:</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="editPrereq">Prerequisite</string>
    <string name="preqScreen">Enter preq id, if you enter preq already listed, it removes it</string>
    <string name="preqTarget">Enter course to add preq to</string>
    <string name="addPoolButton">Add Course to Pool</string>
    <string name="removePoolButton">Remove Course from Pool</string>
    <string name="CoursesInPool">Courses in this pool:</string>
    <string name="editPoolCourses">Edit Pool Courses:</string>
    <string name="addPoolCourse">Enter pool name, then course ID:</string>
    <string name="add_or_remove_from_a_pool">Add or remove from a pool?</string>
    <string name="view_pool_courses">View Pool Courses</string>
    <string name="if_you_want_to_view_pool_please_enter_pool_name_here">If you want to view pool, please enter pool name here</string>
    <string name="poolCourseList">Courses in this pool:</string>
    <string name="enter_course_id">Enter Course ID</string>
    <string name="enter_pool_name_to_view">Enter Pool Name to View</string>
    <string name="addviseeName">Advisee Name</string>
    <string name="classYear">Class Year</string>
    <string name="studentId">Student ID</string>
    <string name="classTaken">Courses Taken</string>
    <string name="classesNeeded">Courses Needed</string>
    <string name="major">Major</string>


</resources>