<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.advisorView.AddAdviseeViewFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterPreq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/editPrereq"
            android:maxLength="7"
            android:singleLine="true"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/enterPreqButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterPreqTarget" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterPreqTarget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/preqTarget"
            android:maxLength="7"
            android:singleLine="true"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/enterPreqButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/removeCourse2" />

        <TextView
            android:id="@+id/removeCourse2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/preqScreen"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/enterPreqButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="158dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="165dp"
            android:layout_marginBottom="48dp"
            android:text="@string/doneLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterPreqTarget" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>