...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterRemoveID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/enterRemoveID"
            android:maxLength="7"
            android:singleLine="true"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/removeCourseButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/removeCourse2" />

        <TextView
...
