...
    android:scrollIndicators="right"
    android:scrollbarSize="6dp"
    android:scrollbars="vertical"
    tools:context=".view.advisorView.AdvisorMenuFrag">

    <Button
        android:id="@+id/addAdviseeButton4"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/maroon"
        android:fontFamily="sans-serif-medium"
...
